# GatiWeb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
src/: main.cpp
src/networking/: HttpClient.cpp  HttpClient.h
src/renderer/: DomNode.cpp  DomNode.h  HtmlParser.cpp  HtmlParser.h  LayoutBox.h
src/ui/: MainWindow.cpp  MainWindow.h
